whoami/ingress-route.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: whoami
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`whoami.argocd-k3s-test.panzer1119.de`)
      middlewares:
        - name: redirect-to-https
          namespace: traefik
        - name: local-only
          namespace: traefik
      services:
        - name: whoami
          port: 80
...
